feat: twitter:cardをheadに追加

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <meta property="og:image" content="https://img.youtube.com/vi/j7XsQ9eIe-g/0.jpg">
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
     <noscript>
