--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <meta property="og:image" content="https://img.youtube.com/vi/j7XsQ9eIe-g/0.jpg">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="キングコングプレイリスト">
+    <meta property="og:title" content="キングコングプレイリスト">
   </head>
   <body>
     <noscript>
