feat: apple-touch-iconを追加

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="キングコングプレイリスト">
     <meta property="og:title" content="キングコングプレイリスト">
+    <link rel="apple-touch-icon-precomposed" type="image/png" href="https://i.ytimg.com/vi/uc8pECvTny8/mqdefault.jpg">
   </head>
   <body>
     <noscript>
