--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="キングコングプレイリスト">
     <meta property="og:title" content="キングコングプレイリスト">
-    <link rel="apple-touch-icon-precomposed" type="image/png" href="https://i.ytimg.com/vi/uc8pECvTny8/mqdefault.jpg">
+    <link rel="apple-touch-icon-precomposed" type="image/png" href="https://user-images.githubusercontent.com/33926355/101858480-0984a100-3bad-11eb-8892-70edd4c710bd.png">
   </head>
   <body>
     <noscript>
